--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,16 @@ version: 2.1
 # Define the jobs we want to run for this project
 jobs:
   build:
+    working_directory: ~/my-project
     docker:
-      - image: cimg/base:2023.03
+      - image: circleci/node:10-browsers
     steps:
       - checkout
-      - run: echo "this is the build job"
-  test:
-    docker:
-      - image: cimg/base:2023.03
-    steps:
-      - checkout
-      - run: echo "this is the test job"
-
-# Orchestrate our job run sequence
-workflows:
-  build_and_test:
-    jobs:
-      - build
-      - test
+      - restore_cache:
+          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
+      - run: npm install
+      - save_cache:
+          key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
+          paths:
+            - "node_modules"
+      - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
