--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     working_directory: ~/my-project
     docker:
-      - image: circleci/node:10-browsers
+      - image: circleci/node:16-browsers
     steps:
       - checkout
       - restore_cache:
@@ -15,4 +15,4 @@ jobs:
           key: my-project-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
             - "node_modules"
-      - run: npm run test -- --no-watch --no-progress
+      - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
